--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,6 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 ghc-options:
 - -Wall
-- -Werror
 
 dependencies:
 - base >= 4.7 && < 5
@@ -34,9 +33,9 @@ library:
   source-dirs: src
 
 executables:
-  lac-exe:
+  lac:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         lac
     ghc-options:
     - -threaded
     - -rtsopts
