package.yaml: Added `other-extensions` section

--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,14 @@ dependencies:
 
 library:
   source-dirs: src
+  other-extensions:
+  - FlexibleContexts
+  - GADTs
+  - GeneralizedNewtypeDeriving
+  - LambdaCase
+  - OverloadedStrings
+  - PatternSynonyms
+  - StandaloneDeriving
 
 executables:
   lac:
