--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 ghc-options:
 - -Wall
 - -freverse-errors
+- -fno-warn-orphans
 
 dependencies:
 - base >= 4.7 && < 5
