package.yaml: Added `-fobject-code` flag

--- a/package.yaml
+++ b/package.yaml
@@ -55,6 +55,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -fobject-code
     dependencies:
     - lac
   lac-lnf:
